--- a/Object_oriented_Programming Assignment_Pw_Skills.ipynb
+++ b/Object_oriented_Programming Assignment_Pw_Skills.ipynb
@@ -202,11 +202,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16afa383",
+   "cell_type": "markdown",
+   "id": "140a6551",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Single Inheritance:\n",
     "             # A class inherits from one parent class.\n",
@@ -228,8 +226,7 @@
     "# Hybrid Inheritance:\n",
     "\n",
     "            # A combination of two or more types of inheritance.\n",
-    "            # Example: Combining multiple and multilevel inheritance.\n",
-    "        "
+    "            # Example: Combining multiple and multilevel inheritance."
    ]
   },
   {
